--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,14 @@
     @apply bg-white dark:bg-neutral-800 !p-0 overflow-hidden !gap-0;
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
